# XtraGPT

./: .gitignore  .gitmodules  README.md  requirements.txt
6_component_evaluation/: README.md  change_to_json_new.py  convert.py  convert_predictions.py  glm_winrate.py  run_eval.sh  run_scorer.sh
6_component_evaluation/alpaca_eval_gpt4_turbo_fn/: alpaca_eval_fn_abstract.txt  alpaca_eval_fn_background.txt  alpaca_eval_fn_conclusion.txt  alpaca_eval_fn_evaluation.txt  alpaca_eval_fn_introduction.txt  alpaca_eval_fn_title.txt  configs.yaml  modified_configs.yaml
configs/: dataset_info.json  train_config.yaml
examples/: inference_example.py
full_paper_evaluation/: README.md  ai_scientist.py  ai_scientist_eval.py  analyze_improvement.py  analyze_results.py  plot.py  validate_ai_scientist.py
full_paper_evaluation/paper_results/: after_revision_scores.json  before_revision_scores.json  decisions_after_xtragpt.json  decisions_before_xtragpt.json
paper_revision_bench/: README.md  pyproject.toml
paper_revision_bench/examples/: async_batch.py  basic_usage.py  different_judges.py  reproduce_xtragpt.py  reproduce_xtragpt_correct.py  reproduce_xtragpt_final.py  reproduction_results.json  reproduction_results_correct.json  reproduction_results_final.json  sample_data.json
paper_revision_bench/paper_revision_bench/: __init__.py  cli.py  core.py  criteria.py  judges.py  paper_prompts.py  results.py
paper_revision_bench/paper_revision_bench/metrics/: __init__.py  glm_winrate.py
paper_revision_bench/paper_revision_bench/utils/: __init__.py
paper_revision_bench/tests/: test_main.py
prediction/: README.md
scripts/: predict.sh  train.sh
skills/: provider.xtragpt.yaml
tests/openclaw-demo/: demo.cast  demo_script.sh  extract_paper.py  paper_sections.json  patch_openclaw_config.py  run_demo.py  start_vllm.sh  wait_vllm.sh
tests/openclaw-demo/outputs/: before_after.json  (+1 more)
train/: README.md  paper_sft.yaml  run_converter.sh  run_prediction.sh
train/data/: data.json
xtragpt-paper-revision-skill/: README.md
